openshift/product-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  labels:
    app: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          # Replace with your OpenShift internal registry path after Tekton builds & pushes the image:
          # image-registry.openshift-image-registry.svc:5000/<project>/product-service:latest
          image: image-registry.openshift-image-registry.svc:5000/riyazkhan03-dev/product-service:latest
          ports:
            - containerPort: 8081
          resources:
            requests: { cpu: 100m, memory: 384Mi }
            limits: { cpu: 500m, memory: 512Mi }
          readinessProbe:
            httpGet: { path: /actuator/health, port: 8081 }
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: /actuator/health, port: 8081 }
            initialDelaySeconds: 40
            periodSeconds: 20
