openshift/product-service/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: product-service
spec:
  to:
    kind: Service
    name: product-service
  port:
    targetPort: 8081
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
